--- a/perspective-camera/index.html
+++ b/perspective-camera/index.html
@@ -16,8 +16,8 @@
     <script type="importmap">
     {
         "imports": {
-            "three": "https://unpkg.com/three@0.174.0/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three@0.174.0/examples/jsm/"
+            "three": "https://esm.sh/three@0.174.0/build/three.module.js",
+            "three/addons/": "https://esm.sh/three@0.174.0/examples/jsm/"
         }
     }
     </script>
