feat: 实战-随机山脉地形

--- a/data-gui/ index.html
+++ b/data-gui/ index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>dat.gui 可视化调试</title>
     <style>
         body {
             margin: 0;
