--- a/buffer-geometry/index.html
+++ b/buffer-geometry/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BufferGeometry：顶点生成各种几何体</title>
     <style>
         body {
             margin: 0;
