--- a/first-scene/index.html
+++ b/first-scene/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>第一个 3D 场景</title>
     <style>
         body {
             margin: 0;
