--- a/mountain-terrain/index.html
+++ b/mountain-terrain/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>点模型、线模型、网格模型</title>
+    <title>随机山脉地形</title>
     <style>
         body {
             margin: 0;
         }
     </style>
 </head>
-
 <body>
     <script type="importmap">
     {
         "imports": {
             "three": "https://esm.sh/three@0.174.0/build/three.module.js",
-            "three/addons/": "https://esm.sh/three@0.174.0/examples/jsm/"
+            "three/addons/": "https://esm.sh/three@0.174.0/examples/jsm/",
+            "simplex-noise": "https://esm.sh/simplex-noise@4.0.3/dist/esm/simplex-noise.js"
         }
     }
     </script>
     <script type="module" src="./index.js"></script>
 </body>
-
 </html>
